hphp/hack/test/typecheck/inout/bad_inout_hint_parent5.php.like_types.exp
File "bad_inout_hint_parent5.php", line 5, characters 12-33:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "bad_inout_hint_parent5.php", line 10, characters 7-8:
Class C2 does not correctly implement all required members  (Typing[4184])
File "bad_inout_hint_parent5.php", line 10, characters 18-19:
Some members are incompatible with those declared in type C1
Read the following to see why:
File "bad_inout_hint_parent5.php", line 11, characters 19-21:
Member foo has the wrong type
File "bad_inout_hint_parent5.php", line 4, characters 42-44:
This is an inout parameter
File "bad_inout_hint_parent5.php", line 11, characters 36-38:
It is incompatible with a normal parameter
File "bad_inout_hint_parent5.php", line 12, characters 12-25:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
